corregir nombre de paginas

--- a/contacto.html
+++ b/contacto.html
@@ -16,16 +16,16 @@
 
 <!--Barra de Navegacion-->
 
-  <nav class="navbar" id="navbar">
-    <div class="container-fluid">
-      <a href="index.html">Home</a>
-      <a href="informacion.html">Informacion</a>
-      <a href="multimedia.html">Multimedia</a>
-      <a href="contacto.html">Contacto</a>
+<nav class="navbar" id="navbar">
+  <div class="container-fluid">
+    <a href="index.html">Home</a>
+    <a href="cuidado_canino.html">Cuidado Canino</a>
+    <a href="audiovisual.html">Audiovisual</a>
+    <a href="contacto.html">Contacto</a>
+  
     
-      
-    </div>
-  </nav>
+  </div>
+</nav>
  
   <main class="principal">  
     <H1>Contacto: aqui formulario de contacto</H1>
