--- a/audiovisual.html
+++ b/audiovisual.html
@@ -66,19 +66,19 @@
 
   <section class="centrado"> 
     <div class="video-container">
-        <video src="assets/img/perros jugando 1.MP4" autoplay muted></video>
+        <video src="assets/media/perros jugando 1.MP4" autoplay muted></video>
     </div>
 
     <div class="video-container">
-        <video src="assets/img/perros jugando 2.MP4" autoplay muted></video>
+        <video src="assets/media/perros jugando 2.MP4" autoplay muted></video>
     </div>
 
     <div class="video-container">
-        <video src="assets/img/perros jugando 3.MP4" autoplay muted></video>
+        <video src="assets/media/perros jugando 3.MP4" autoplay muted></video>
     </div>
 
     <div class="video-container">
-        <video src="assets/img/perros jugando 4.MP4" autoplay muted></video>
+        <video src="assets/media/perros jugando 4.MP4" autoplay muted></video>
     </div>
    
     </section>
