--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,8 @@
   <link rel="icon" href="../assets/media/icons/pets.svg" type="image/x-icon">
   <link rel="stylesheet" href="../assets/css/contacto.css">
   <link rel="stylesheet" href="../assets/css/header.css">
+  <link rel="stylesheet" href="../assets/css/footer.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Chewy&display=swap" rel="stylesheet">
   <script src="../assets/js/script.js"></script>
 
 </head>
@@ -77,7 +79,7 @@
 
 
   <footer class="footer">
-    <p>Derechos reservados &copy; 2023</p>
+    <p>Derechos reservados &copy; 2024</p>
   </footer>
 
 </body>
