agregué los estilos por separados del header, footer e index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <meta name="description" content="Actividad Practica 01 - Proyecto Integrador I - 2024">
   <meta name="author" content="Grupo 2 - Basualdo/Cuda/Heredia/Juarez/Lopez">
   <link rel="icon" href="../assets/media/icons/pets.svg" type="image/x-icon">
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/index.css">
+  <link rel="stylesheet" href="../assets/css/header.css">
+  <link rel="stylesheet" href="../assets/css/footer.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Chewy&display=swap" rel="stylesheet">
   <script src="../assets/js/script.js"></script>
 </head>
@@ -56,28 +58,6 @@
 </body>
 
 </html>
-<!--Barra de Navegacion
-
-<nav class="navbar" id="navbar">
-  <div class="container-fluid">
-    <a href="index.html">Home</a>
-    <a href="cuidado_canino.html">Cuidado Canino</a>
-    <a href="audiovisual.html">Audiovisual</a>
-    <a href="contacto.html">Contacto</a>
-  </div>
-</nav>
-
-  <main class="principal">  
-    <H1>Home</H1>
-
-  </main>
-
-
-    
-  <footer>
-
-  </footer>
--->
 
 
 
