--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
        <article class="container">
            <h3>¡Bienvenido/a!</h3>
            <!-- Imagen flotante a la derecha -->
-           <img class="image" src="/assets/media/img/cachorros.jpg" alt="Cachorros en escalones">
+           <img class="image" src="../assets/media/img/cachorros.jpg" alt="Cachorros en escalones">
            <p>¡Bienvenidos a <b>"El mundo de los perros"</b> ! Este es un espacio dedicado a todos los amantes de los <em>perros</em>, donde encontrarás información valiosa, consejos prácticos y una comunidad apasionada por nuestros fieles amigos de cuatro patas. 
                Nuestro objetivo es celebrar la alegría y el amor que los <em>perros</em> traen a nuestras vidas, y ayudarte a cuidar mejor de tu peludo compañero.</p>
            <!-- Imagen flotante a la izquierda -->
-               <img class="image2" src="assets/media/img/perroBlanco.jpg" alt="Perro blanco acostado en el césped">
+               <img class="image2" src="../assets/media/img/perroBlanco.jpg" alt="Perro blanco acostado en el césped">
            <p>Los <em>perros</em> han sido compañeros leales y amorosos para los seres humanos durante miles de años. 
                No solo son excelentes amigos, sino que también tienen un impacto positivo en nuestra salud y bienestar. Los <em>perros</em> nos brindan compañía, nos animan a mantenernos activos y pueden mejorar nuestro estado de ánimo. 
                Desde los cachorros juguetones hasta los sabios <em>perros</em> mayores, cada uno tiene una personalidad única y una capacidad infinita para amar.</p>
             
-               <img class="image3" src="assets/media/img/perros-jugando.jpg" alt="Perros jugando">
+               <img class="image3" src="../assets/media/img/perros-jugando.jpg" alt="Perros jugando">
            <p>En esta página, exploraremos la importancia de los <em>perros</em> en nuestras vidas. Aprenderás sobre diferentes razas, consejos para el cuidado, entrenamiento, alimentación, y mucho más. 
                Queremos que tanto tú como tu <em>perro</em> disfruten de una vida plena y feliz juntos.</p>
            <p>Además, destacaremos historias inspiradoras de <em>perros</em> que han cambiado la vida de sus dueños, información sobre la adopción y rescate de perros, y recomendaciones sobre productos y servicios que pueden mejorar la calidad de vida de tu mascota. 
