--- a/contacto.html
+++ b/contacto.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Actividad Practica 01</title>
   <meta name="description" content="Actividad Practica 01 - Proyecto Integrador I - 2024">
@@ -11,13 +12,13 @@
   <link rel="stylesheet" href="../assets/css/contacto.css">
   <link rel="stylesheet" href="../assets/css/header.css">
   <link rel="stylesheet" href="../assets/css/footer.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Chewy&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Chewy&display=swap"
+    rel="stylesheet">
   <script src="../assets/js/script.js"></script>
 
 </head>
 
 <body>
-
   <header>
     <h1>El mundo de los perros</h1>
     <nav>
@@ -56,7 +57,7 @@
       <label for="comentario">Comentario</label>
       <textarea name="comentario" id="comentario" placeholder="Introduce aquí tu comentario" required></textarea>
 
-      
+
       <label for="motivo">Motivo de contacto:</label>
       <div class="contenedor-radio-motivo">
         <label>
