--- a/contacto.html
+++ b/contacto.html
@@ -23,10 +23,10 @@
     <h1>El mundo de los perros</h1>
     <nav>
       <ul>
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a  href="index.html">Home</a></li>
         <li><a href="cuidado_canino.html">Cuidado canino</a></li>
         <li><a href="audiovisual.html">Audiovisuales</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a class="active"href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
