--- a/cuidado_canino.html
+++ b/cuidado_canino.html
@@ -31,7 +31,7 @@
             th {
                 border: 1px solid rgb(190, 190, 190);
                 padding: 10px 20px;
-                background-color: rgb(162, 162, 162);
+                background-color: rgb(225, 225, 225);
             }
             tr:nth-child(even) {
                 background-color: rgb(245, 245, 245);
@@ -40,6 +40,12 @@
             tr:nth-child(odd) {
                 background-color: rgb(255, 255, 255);
             }
+            h2 {
+                font-family: 'Chewy', cursive; /* Fuente del subtítulo */
+                color: #555; /* Color del texto */
+                margin: 0; /* Eliminar margen */
+                padding: 0; /* Eliminar relleno */
+                }
 
         </style>
     </head>
@@ -48,8 +54,8 @@
     <h1>El mundo de los perros</h1>
     <nav>
       <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="cuidado_canino.html">Cuidado canino</a></li>
+        <li><a  href="index.html">Home</a></li>
+        <li><a class="active"href="cuidado_canino.html">Cuidado canino</a></li>
         <li><a href="audiovisual.html">Audiovisuales</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
