--- a/audiovisual.html
+++ b/audiovisual.html
@@ -35,11 +35,11 @@
 
       <ul>
 
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
 
-        <li><a href="cuidado_canino.html">Cuidado canino</a></li>
+        <li><a  href="cuidado_canino.html">Cuidado canino</a></li>
 
-        <li><a href="audiovisual.html">Audiovisuales</a></li>
+        <li><a class="active"href="audiovisual.html">Audiovisuales</a></li>
 
         <li><a href="contacto.html">Contacto</a></li>
 
